--- a/Eshop/css/style.css
+++ b/Eshop/css/style.css
@@ -217,6 +217,14 @@ body{
 	margin: 0 auto;
 	position: relative;
 }
+#Ad .banPrev_bg,#Ad .banNext_bg{
+	width: 470px;
+	height: 300px;
+	position: absolute;
+	top: 0;
+	opacity: 0;
+	z-index: 5;
+}
 #Ad ul{
 	position: absolute;
 	top: 0;
