--- a/IFE/task01/css/style01_03_position.css
+++ b/IFE/task01/css/style01_03_position.css
@@ -2,12 +2,27 @@ body,p,ul,li{
 	margin: 0;
 	padding: 0;
 }
+p{
+	font-size: 14px;
+}
+a{
+	text-decoration: none;
+}
 img{
 	border: none;
-	border-radius: 5px;
+	border-radius: 100%;
+	width: 80px;
+	height: 80px;
 }
 li{
 	list-style: none;
+}
+span{
+	font-weight: bold;
+	line-height: 160%;
+}
+section{
+	margin: 5px;
 }
 
 /*清除浮动*/
@@ -18,66 +33,66 @@ li{
     clear: both;
     visibility: hidden;
 }
-
 .clearfix {
     zoom: 1;
 }
-
-#context{
+/*公用部分*/
+.bg_color{
 	background-color: #eee;
-	margin: 0 auto;
+}
+.bg_padding{
+	padding:20px;
+}
+.bg_border{
 	border: 1px solid #999;
+}
+#context{	
+	margin: 0 auto;	
 	margin: 20px;
 	height: 100%;
 	width: auto;
-	/*min-width: 960px;*/
-	padding:20px;
+	min-width: 800px;
 }
 #team{
 	width: 198px;
-	height: 80px;
+	height: 118px;
 	float: left;
-/*	position: relative;
+	position: relative;
 	top: 0;
-	left:0;*/
-	padding: 20px;
-	border: 1px solid #999;
+	left:0;
 }
 #team img{
-/*	position: absolute;
-	top: 0;
-	left:0;*/
-	width: 80px;
-	height: 80px;
-	
+	position: absolute;
+	top: 20px;
+	left:20px;
 }
 #team p{
-	display: inline-block;
-	height: 80px;
-	line-height: 80px;
-	/*width: 120px;*/
-	/*position: absolute;*/
-/*	left: 120px;
-	top: 20px;*/
+	position: absolute;
+	left: 120px;
+	top: 20px;
 	font-size: 12px;
 }
-#list{}
 #list ul{
 	float: right;
-	border: 1px solid #999;
-	margin:0 20px;
-}
-#list li{
-	padding: 20px;
-}
-#list li img{
-	width: 80px;
-	height: 80px;
-	border: 1px solid #999;
 }
 #container{
-	padding: 20px;
-	margin:0 166px 20px 240px;
-	border: 1px solid #999;
-	/*width: 100%;*/
+	margin:0 146px 20px 220px;
+	/*min-width: 440px;*/
+	/*问题1：为什么在内容里面最小宽度不适用？*/
+	/*overflow: scroll;但是这样很不合理*/
+}
+.introCon{
+	width: 100%;
+	height: 80px;
+	position: relative;
+}
+.introCon img{
+	width: 60px;
+	height: 60px;
+	margin: 10px;
+}
+.introInfo{
+	position: absolute;
+	top: 15px;
+	left: 100px;
 }
