--- a/IFE/task01/css/style01_03_position.css
+++ b/IFE/task01/css/style01_03_position.css
@@ -74,25 +74,26 @@ section{
 }
 #list ul{
 	float: right;
+	width: 118px;
 }
 #container{
-	margin:0 146px 20px 220px;
+	margin:0 140px 20px 220px;
 	/*min-width: 440px;*/
 	/*问题1：为什么在内容里面最小宽度不适用？*/
 	/*overflow: scroll;但是这样很不合理*/
 }
 .introCon{
 	width: 100%;
-	height: 80px;
+	height: 70px;
 	position: relative;
 }
 .introCon img{
 	width: 60px;
 	height: 60px;
-	margin: 10px;
+	margin: 5px;
 }
 .introInfo{
 	position: absolute;
-	top: 15px;
+	top: 13px;
 	left: 100px;
 }
